--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@vis.gl/react-google-maps": "^1.5.1",
     "axios": "^1.8.2",
     "nth-check": "^2.1.1",
     "postcss": "^8.5.3",
@@ -48,5 +49,4 @@
     ]
   },
   "proxy": "http://localhost:8000"
-
 }
