--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,7 +50,6 @@
   "proxy": "http://localhost:8000",
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.13"
+    "postcss": "^8.5.3"
   }
 }
