--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     command: gunicorn config.wsgi:application --bind 0.0.0.0:8000 --timeout 120
     volumes:
       - ./backend:/app
+      - ./backend/staticfiles:/app/staticfiles  # ← 追加！
     env_file:
       - .env
     depends_on:
@@ -41,6 +42,17 @@ services:
       - "3000:3000"
     depends_on:
       - backend
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./backend/staticfiles:/app/staticfiles
+    restart: always
 
 volumes:
   postgres_data:
