--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,11 @@
   "proxy": "http://localhost:8000",
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3"
+    "html-webpack-plugin": "^5.6.3",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.14"
+  },
+  "resolutions": {
+    "tailwindcss": "^4.0.14"
   }
 }
