[add]Django_test

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,20 @@
-Django>=4.2,<5.0
-djangorestframework
-gunicorn
-psycopg2-binary
-django-cors-headers
+asgiref==3.8.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+Django==4.2.20
+django-cors-headers==4.7.0
+djangorestframework==3.16.0
+exceptiongroup==1.2.2
+gunicorn==23.0.0
+idna==3.10
+iniconfig==2.1.0
+packaging==24.2
+pluggy==1.5.0
+psycopg2-binary==2.9.10
+pytest==8.3.5
+pytest-django==4.11.1
 requests==2.32.3
+sqlparse==0.5.3
+tomli==2.2.1
+typing_extensions==4.13.0
+urllib3==2.3.0
