--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,10 +32,10 @@ services:
 
   # frontend:
   #   build: ./frontend_dev
-  #   command: npm start
-  #   volumes:
-  #     - ./frontend:/app
-  #     - /app/node_modules
+  #   command: npm run dev
+  #   # volumes:
+  #   #   - ./frontend_dev:/app
+  #     # - /app/node_modules
   #   env_file:
   #     - .env
   #   ports:
