--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -5,7 +5,10 @@ name: Frontend Deploy
 on:
   push:
     branches:
-      - release  # mainブランチへのpushで実行
+      - main
+    paths:
+      - 'frontend/**'
+      - '.github/workflows/frontend-deploy.yml'
 
 jobs:
   deploy:
@@ -38,4 +41,4 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          SOURCE_DIR: frontend_dev/dist  # Viteのビルド先（変更が必要なら調整）
+          SOURCE_DIR: frontend_dev/dist  # Viteのビルド先
