--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,13 +44,13 @@ services:
   #     - backend
 
   nginx:
-    image: nginx:latest
+    build: ./nginx  # ← image: nginx:latest を build に変更
     ports:
       - "80:80"
     depends_on:
       - backend
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      # - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./backend/staticfiles:/app/staticfiles
     restart: always
 
