--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     volumes:
       - ./backend:/app
       - ./backend/staticfiles:/app/staticfiles
+      - ./logs/django:/app/logs   # ← Djangoログをホストと共有
     env_file:
       - .env
     depends_on:
@@ -52,6 +53,7 @@ services:
     volumes:
       # - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./backend/staticfiles:/app/staticfiles
+      - ./logs/nginx:/var/log/nginx   # ← Nginxログをホストと共有
     restart: always
 
 volumes:
