--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -26,7 +26,14 @@ jobs:
           username: ${{ secrets.BASTION_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            echo "🚀 deploy.sh を実行中..."
-            cd /home/${{ secrets.BASTION_USER }}
-            chmod +x ./deploy.sh
-            ./deploy.sh
+            echo "🔑 ターゲット用のSSH鍵を保存"
+            echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/target_key.pem
+            chmod 600 ~/.ssh/target_key.pem
+
+            echo "🚀 ターゲットEC2で deploy.sh 実行"
+            ssh -o StrictHostKeyChecking=no -i ~/.ssh/target_key.pem ec2-user@${{ secrets.TARGET_PRIVATE_IP }} << 'EOS'
+              echo "📦 デプロイスクリプトを実行中..."
+              cd /home/ec2-user/
+              chmod +x ./deploy.sh
+              ./deploy.sh
+            EOS
