--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -19,6 +19,30 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-1
+
+      # 🔹 GitHub Actions のグローバルIPを取得
+      - name: Get GitHub Actions IP
+        id: myip
+        run: echo "IP=$(curl -s https://checkip.amazonaws.com)" >> $GITHUB_ENV        
+
+      # 🔹 IPをセキュリティグループに一時許可
+      - name: Allow SSH from GitHub Actions
+        run: |
+          echo "📡 許可するIP: ${{ env.IP }}"
+          aws ec2 authorize-security-group-ingress \
+            --group-id ${{ secrets.BASTION_SG_ID }} \
+            --protocol tcp \
+            --port 22 \
+            --cidr ${{ env.IP }}/32 \
+            --region ap-northeast-1
+
+      # 🔹 デプロイ処理（踏み台経由でターゲットEC2にSSHしてdeploy.sh実行）
       - name: SSH to Bastion and Run deploy.sh
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -37,3 +61,14 @@ jobs:
               chmod +x ./deploy.sh
               ./deploy.sh
             EOS
+
+      # 🔹 セキュリティグループからIPを削除（常に実行）
+      - name: Revoke SSH access
+        if: always()
+        run: |
+          aws ec2 revoke-security-group-ingress \
+            --group-id ${{ secrets.BASTION_SG_ID }} \
+            --protocol tcp \
+            --port 22 \
+            --cidr ${{ env.IP }}/32 \
+            --region ap-northeast-1
