--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -53,6 +53,12 @@ jobs:
             --cidr ${{ env.IP }}/32 \
             --region ap-northeast-1
 
+      - name: Add EC2 and Bastion to known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -H ${{ secrets.BASTION_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.TARGET_PRIVATE_IP }} >> ~/.ssh/known_hosts
+          
       # 🔹 成果物の転送（SCP経由）
       - name: Upload via SCP
         run: |
