--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,6 @@
 services:
   backend:
-    build: ./backend
+    image: myapp-backend
     command: gunicorn config.wsgi:application --bind 0.0.0.0:8000 --timeout 120
     working_dir: /app
     volumes:
@@ -15,7 +15,7 @@ services:
 
 
   nginx:
-    build: ./nginx  # ← image: nginx:latest を build に変更
+    image: myapp-nginx  # ← build: を image: に変更
     ports:
       - "80:80"
     depends_on:
