--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
       - ./backend/staticfiles:/app/staticfiles
       - ./logs/django:/app/logs   # ← Djangoログをホストと共有
     env_file:
-      - .env.deploy
+      - /home/ec2-user/.env.deploy   # ← 絶対パスに変更
     ports:
       - "8000:8000"
     restart: always
@@ -24,5 +24,5 @@ services:
       - ./backend/staticfiles:/app/staticfiles
       - ./logs/nginx:/var/log/nginx   # ← Nginxログをホストと共有
     env_file:
-      - .env.deploy
+      - /home/ec2-user/.env.deploy   # ← 絶対パスに変更
     restart: always
