--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -19,3 +19,23 @@ jobs:
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Notify LINE via Messaging API
+        run: |
+          if [ "${{ github.event.workflow_run.conclusion }}" = "success" ]; then
+            MESSAGE="✅ デプロイ成功！"
+          else
+            MESSAGE="❌ デプロイ失敗！"
+          fi
+
+          curl -X POST https://api.line.me/v2/bot/message/push \
+            -H "Content-Type: application/json" \
+            -H "Authorization: Bearer ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}" \
+            -d '{
+              "to": "${{ secrets.LINE_USER_ID }}",
+              "messages": [
+                {
+                  "type": "text",
+                  "text": "'"${MESSAGE}"'"
+                }
+              ]
