[setup] backend.yml修正

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -10,6 +10,7 @@ on:
       - 'backend/**'
       - 'docker/**'
       - '.github/workflows/backend.yml'
+      - '.github/workflows/notify.yml'
 
 jobs:
   deploy-backend:
