[setup] backend.yml

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -93,8 +93,8 @@ jobs:
 
       - name: Debug bastion output values
         run: |
-          echo "Bastion IP: ${{ steps.bastion_info.outputs.bastion_ip }}"
-          echo "Bastion SG ID: ${{ steps.bastion_info.outputs.bastion_sg_id }}"
+          echo "Bastion IP: ${{ env.BASTION_IP }}"
+          echo "Bastion SG ID: ${{ env.BASTION_SG_ID }}"
         
     
       # 🔹 9. プライベートEC2のSGにBastion SGを許可
@@ -104,7 +104,7 @@ jobs:
             --group-id ${{ secrets.PRIVATE_EC2_SG_ID }} \
             --protocol tcp \
             --port 22 \
-            --source-group ${{ steps.bastion_info.outputs.bastion_sg_id }} \
+            --source-group ${{ env.BASTION_SG_ID }} \
             --region ap-northeast-1          
 
       # 🔹 10. backend/nginxイメージのビルド
@@ -141,23 +141,23 @@ jobs:
       - name: Add known_hosts entries
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ steps.bastion_info.outputs.bastion_ip }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ env.BASTION_IP }} >> ~/.ssh/known_hosts
           ssh -o StrictHostKeyChecking=no \
               -i private_key.pem \
-              ${{ secrets.BASTION_USER }}@${{ steps.bastion_info.outputs.bastion_ip }} \
+              ${{ secrets.BASTION_USER }}@${{ env.BASTION_IP }} \
               "ssh-keyscan -H ${{ secrets.TARGET_PRIVATE_IP }}" >> ~/.ssh/known_hosts
           
       # 🔹 15. SCP転送
       - name: Upload via SCP through Bastion
         run: |
-          scp -o "ProxyCommand=ssh -i private_key.pem -W %h:%p ${{ secrets.BASTION_USER }}@${{ steps.bastion_info.outputs.bastion_ip }}" \
+          scp -o "ProxyCommand=ssh -i private_key.pem -W %h:%p ${{ secrets.BASTION_USER }}@${{ env.BASTION_IP }}" \
               -i private_key.pem deploy.zip \
               ec2-user@${{ secrets.TARGET_PRIVATE_IP }}:/home/ec2-user/
     
       # 🔹 16. SSHして展開・再起動
       - name: SSH and Deploy
         run: |
-          ssh -o "ProxyCommand=ssh -i private_key.pem -W %h:%p ${{ secrets.BASTION_USER }}@${{ steps.bastion_info.outputs.bastion_ip }}" \
+          ssh -o "ProxyCommand=ssh -i private_key.pem -W %h:%p ${{ secrets.BASTION_USER }}@${{ env.BASTION_IP }}" \
               -i private_key.pem ec2-user@${{ secrets.TARGET_PRIVATE_IP }} << 'EOF'
             set -e
             cd /home/ec2-user
@@ -179,7 +179,7 @@ jobs:
             --group-id ${{ secrets.PRIVATE_EC2_SG_ID }} \
             --protocol tcp \
             --port 22 \
-            --source-group ${{ steps.bastion_info.outputs.bastion_sg_id }} \
+            --source-group ${{ env.BASTION_SG_ID }} \
             --region ap-northeast-1
 
       # 🔹 18. Bastion EC2破棄（envs/bastion-temp）
